--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
 
   http: ^1.1.2
-  webview_flutter: ^3.0.0
+  webview_flutter_plus: ^0.4.4
   fluttertoast: ^8.0.8
   flutter_bcrypt: ^1.0.7
 
