--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^0.13.4
-  webview_flutter: ^3.0.0
+  http: ^1.1.2
+  webview_flutter_plus: ^0.4.4
   flutter_inappwebview: ^5.3.2
   fluttertoast: ^8.0.8
   flutter_upayments:
